--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
 <h1>
 <a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h1>
 
-<p>Coming soon.</p>
+<ul>
+  <li>Multiple shape support (circle, rectangle/square, triangle)</li>
+  <li>Gaussian blur effect</li>
+  <li>Custom border support</li>
+  <li>Customizable drop shadow support</li>
+  <li>Multiple images within the same View (à la Facebook chat heads): </li>
+</ul>
+
+<img src="http://www.textually.org/textually/archives/2013/04/09/fb-home-chat-heads-100032180-medium.jpg" alt="Multiple images example">
 
 <h1>
 <a name="developed-by" class="anchor" href="#developed-by"><span class="octicon octicon-link"></span></a>Developed By</h1>
