--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 
 <img src="http://www.textually.org/textually/archives/2013/04/09/fb-home-chat-heads-100032180-medium.jpg" alt="Multiple images example">
 
+<ul>
+  <li>More features coming soon!</li>
+</ul>
+
 <h1>
 <a name="developed-by" class="anchor" href="#developed-by"><span class="octicon octicon-link"></span></a>Developed By</h1>
 
