--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
 </ul>
 
 <h1>
+<a name="how-do-i-use-it" class="anchor" href="#how-do-i-use-it"><span class="octicon octicon-link"></span></a>How do I use it?</h1>
+
+<p>Head over to the <a href="http://psaravan.github.io/FlexiImageView/tutorial.html">Tutorial</a> page to view examples and prebaked code.</p>
+
+<h1>
 <a name="developed-by" class="anchor" href="#developed-by"><span class="octicon octicon-link"></span></a>Developed By</h1>
 
 <p>Saravan Pantham - <a href="mailto:saravan.pantham@gmail.com">saravan.pantham@gmail.com</a></p>
