--- a/tutorial.html
+++ b/tutorial.html
@@ -31,50 +31,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a name="what-is-it" class="anchor" href="#what-is-it"><span class="octicon octicon-link"></span></a>What is it?</h1>
+        
+        <h1>Getting Started</h1>
 
-<p>FlexiImageView is a powerful extension of Android's default ImageView.</p>
-
-<h1>
-<a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h1>
-
-<ul>
-  <li>Multiple shape support (circle, rectangle/square, triangle)</li>
-  <li>Gaussian blur effect</li>
-  <li>Custom border support</li>
-  <li>Customizable drop shadow support</li>
-  <li>Multiple images within the same View (à la Facebook chat heads): </li>
-</ul>
-
-<img src="http://www.textually.org/textually/archives/2013/04/09/fb-home-chat-heads-100032180-medium.jpg" alt="Multiple images example">
-
-<ul>
-  <li>More features coming soon!</li>
-</ul>
-
-<h1>
-<a name="developed-by" class="anchor" href="#developed-by"><span class="octicon octicon-link"></span></a>Developed By</h1>
-
-<p>Saravan Pantham - <a href="mailto:saravan.pantham@gmail.com">saravan.pantham@gmail.com</a></p>
-
-<h1>
-<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h1>
-
-<p>Copyright 2014 - Saravan Pantham</p>
-
-<pre><code>Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-   http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-</code></pre>
       </section>
     </div>
 
