--- a/tutorial.html
+++ b/tutorial.html
@@ -32,7 +32,9 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         
-        <h1>Getting Started</h1>
+        <h1><a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started</h1>
+        <h2><a name="adding-the-library-to-your-project" class="anchor" href="#adding-the-library-to-your-project"><span class="octicon octicon-link">Adding the library to your project</a></h2>
+        <p>You can download the library as a JAR file (recommended) or fork the entire project source into Android Studio.</p>
 
       </section>
     </div>
