--- a/tutorial.html
+++ b/tutorial.html
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         
-        <h4><a name="adding-the-library-to-your-project" class="anchor">Adding the library to your project</a></h4>
+        <h3>Adding the library to your project</h3>
         <p>You can download the library as a JAR file (recommended) or fork the entire project source into Android Studio.</p>
 
       </section>
