--- a/tutorial.html
+++ b/tutorial.html
@@ -32,6 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         
+        <h1>Using the library</h1>
         <h3>Adding the library to your project</h3>
         <p>You can download the library as a JAR file (recommended) or fork the entire project source into Android Studio.</p>
 
