--- a/tutorial.html
+++ b/tutorial.html
@@ -34,7 +34,7 @@
         
         <h1>Using the library</h1>
         <h3>Adding the library to your project</h3>
-        <p>You can download the library as a JAR file (recommended) or fork the entire project source into Android Studio.</p>
+        <p>You can download the library as a JAR file (recommended) or fork the entire project source into Android Studio. Once you've downloaded the library, add it to your project as a module.</p>
 
       </section>
     </div>
