--- a/tutorial.html
+++ b/tutorial.html
@@ -36,6 +36,19 @@
         <h3>Adding the library to your project</h3>
         <p>You can download the library as a JAR file (recommended) or fork the entire project source into Android Studio. Once you've downloaded the library, add it to your project as a module.</p>
 
+        <h3>Adding the view to your layouts</h3>
+        
+        <p>FlexiImageView is an extension of Android's built-in ImageView view, so you can add it to your XML files just like you'd add an ImageView: </p>
+        
+        <pre>
+          <code>
+            <com.psaravan.flexiimageview.lib.View.FlexiImageView
+              android:id="@+id/flexiImageView"
+              android:layout_height="wrap_content"
+              android:layout_width="wrap_content" />
+          </code>
+        </pre>
+
       </section>
     </div>
 
