--- a/tutorial.html
+++ b/tutorial.html
@@ -42,10 +42,10 @@
         
         <pre>
           <code>
-            "<com.psaravan.flexiimageview.lib.View.FlexiImageView
+            \<com.psaravan.flexiimageview.lib.View.FlexiImageView
               android:id="@+id/flexiImageView"
               android:layout_height="wrap_content"
-              android:layout_width="wrap_content" />"
+              android:layout_width="wrap_content" \/\>
           </code>
         </pre>
 
