--- a/tutorial.html
+++ b/tutorial.html
@@ -41,12 +41,10 @@
         <p>FlexiImageView is an extension of Android's built-in ImageView view, so you can add it to your XML files just like you'd add an ImageView: </p>
         
         <pre>
-          <code>
-            &#60com.psaravan.flexiimageview.lib.View.FlexiImageView
+          <code>&#60com.psaravan.flexiimageview.lib.View.FlexiImageView
               android:id="@+id/flexiImageView"
               android:layout_height="wrap_content"
-              android:layout_width="wrap_content" /&#62
-          </code>
+              android:layout_width="wrap_content" /&#62</code>
         </pre>
 
       </section>
