--- a/tutorial.html
+++ b/tutorial.html
@@ -55,8 +55,7 @@
         <pre><code>FlexiImageView flexiImageView = (FlexiImageView) findViewById(R.id.flexiImageView);</code></pre>
         
         <p>You can now use FlexiImageView's public methods to apply effects/customize your view.</p>
-        <b>NOTE: </b>
-        <p>You must call/set all your view options before setting your view's bitmap/drawable/drawable resource.</p>
+        <p><strong>NOTE: </strong>You must call/set all your view options before setting your view's bitmap/drawable/drawable resource.</p>
         <p>Here's an example that changes the view's shape to an oval: </p>
         
         <pre><code>mFlexiImageView.setShape(FlexiImageView.SHAPE_OVAL)
