--- a/tutorial.html
+++ b/tutorial.html
@@ -70,7 +70,7 @@ mFlexiImageView.setShape(FlexiImageView.SHAPE_OVAL)
           <ul>
             <li>The draw() method is what actually displays the image in the view container.</li>
             <li>You must call setImageBitmap(), setImageResource(), or setImageDrawable() before calling the draw() method.</li>
-            <li>The draw() method should be the last method you call on your FlexiImageView instance. If you change any of the FlexiImageView's properties, you must call draw() again to reflect the changes.</li>
+            <li>The draw() method should be the last method you call on your FlexiImageView instance. If you change any of the FlexiImageView's properties, you must call draw() again for the changes to be made visible.</li>
           </ul>
         </p>
 
