--- a/tutorial.html
+++ b/tutorial.html
@@ -43,7 +43,7 @@
         
         <p>You can add FlexiImageView to any layout within an Activity or a Fragment. FlexiImageView is an extension of Android's built-in ImageView view, so you can add it to your XML files just like you'd add an ImageView: </p>
         
-        {% highlight xml %}
+        {% highlight text %}
         &#60com.psaravan.flexiimageview.lib.View.FlexiImageView
           android:id="@+id/flexiImageView"
           android:layout_height="wrap_content"
