--- a/tutorial.html
+++ b/tutorial.html
@@ -43,12 +43,10 @@
         
         <p>You can add FlexiImageView to any layout within an Activity or a Fragment. FlexiImageView is an extension of Android's built-in ImageView view, so you can add it to your XML files just like you'd add an ImageView: </p>
         
-        {% highlight text %}
-        &#60com.psaravan.flexiimageview.lib.View.FlexiImageView
+        <pre><code>&#60com.psaravan.flexiimageview.lib.View.FlexiImageView
           android:id="@+id/flexiImageView"
           android:layout_height="wrap_content"
-          android:layout_width="wrap_content" /&#62
-        {% endhighlight %}
+          android:layout_width="wrap_content" /&#62</code></pre>
 
         <!-- APPLYING VIEW EFFECTS -->
         <h4>Using FlexiImageView's features</h4>
