--- a/tutorial.html
+++ b/tutorial.html
@@ -66,7 +66,7 @@ mFlexiImageView.setShape(FlexiImageView.SHAPE_OVAL)
         <p>And here's the result: </p>
         
         
-        <p>Here's a few important points to note: 
+        <p>Here are a few important points to note: 
           <ul>
             <li>The <pre><code>draw()</code></pre> method is what actually displays the image in the view container.</li>
             <li>You must call setImageBitmap(), setImageResource(), or setImageDrawable() before calling the draw() method.</li>
